// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EditForm should disable single sign-on checkbox and display instructions 1`] = `
<Panel>
  <form>
    <Panel.Section>
      <Field
        allowSuperUser={false}
        component={[Function]}
        name="access"
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        helpText={
          <span>
            Single sign-on has not been configured for your account. Enable in your 
            <PageLink
              to="/account/settings"
            >
              account's settings
            </PageLink>
            .
          </span>
        }
        label="Enable single sign-on authentication for this user"
        name="is_sso"
        type="checkbox"
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        primary={true}
        size="default"
        submit={true}
      >
        Update user
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`Component: EditForm should render 1`] = `
<Panel>
  <form>
    <Panel.Section>
      <Field
        allowSuperUser={false}
        component={[Function]}
        name="access"
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText={
          <span>
            Enabling single sign-on will delete this user's password. If they switch back to password-based authentication, they'll need to reset their password on login.
          </span>
        }
        label="Enable single sign-on authentication for this user"
        name="is_sso"
        type="checkbox"
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        primary={true}
        size="default"
        submit={true}
      >
        Update user
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;
